added example repos

--- a/hauler/project-airgap-manifest.yaml
+++ b/hauler/project-airgap-manifest.yaml
@@ -8,12 +8,6 @@ spec:
       name: rancher-cluster-templates-aws.md
     - path: https://raw.githubusercontent.com/zackbradys/project-airgap/main/files/rancher-cluster-templates-values.yaml
       name: rancher-cluster-templates-values.yaml
-    - path: https://releases.hashicorp.com/terraform-provider-aws/5.31.0/terraform-provider-aws_5.31.0_linux_amd64.zip
-      name: terraform-provider-aws_5.31.0_linux_amd64.zip
-    - path: https://raw.githubusercontent.com/zackbradys/project-airgap/main/terraform/aws-mgmt-cluster.tar.zst
-      name: aws-mgmt-cluster.tar.zst
-    - path: https://raw.githubusercontent.com/zackbradys/project-airgap/main/terraform/aws-s3-bucket.tar.zst
-      name: aws-s3-bucket.tar.zst
 ---
 apiVersion: content.hauler.cattle.io/v1alpha1
 kind: Charts
@@ -21,9 +15,9 @@ metadata:
   name: project-airgap-charts
 spec:
   charts:
-    - name: cluster-templates
+    - name: rancher-cluster-templates
       repoURL: https://rancherfederal.github.io/rancher-cluster-templates
-      version: 0.4.2
+      version: 0.4.3
 ---
 # apiVersion: content.hauler.cattle.io/v1alpha1
 # kind: Images
