--- a/cluster-templates/examples/digitalocean/values-digitalocean.yaml
+++ b/cluster-templates/examples/digitalocean/values-digitalocean.yaml
@@ -69,6 +69,8 @@ cluster:
         - name: docker.io
           endpoints:
             - rgcrprod.azurecr.us
+      # rewrite:
+         # "^rancher/(.*)": "mirrorproject/rancher-images/$1"
     upgradeStrategy:
       controlPlaneConcurrency: 10%
       controlPlaneDrainOptions:
@@ -96,6 +98,7 @@ cluster:
 # node and nodepool(s) values
 nodepools:
   - name: control-plane-nodes
+    # displayName: cp-nodes
     quantity: 1
     etcd: true
     controlplane: true
@@ -103,8 +106,21 @@ nodepools:
     # labels:
       # key: value
     # taints:
+      # effect: value
       # key: value
+      # value: value
     paused: false
+    # drainBeforeDelete: true
+    # drainBeforeDeleteTimeout: 30s
+    # unhealthyNodeTimeout: 60s
+    # machineDeploymentLabels:
+      # key: value
+    # machineDeploymentAnnotations:
+      # key: value
+    # rollingUpdate:
+      # maxUnavailable: 1
+      # maxSurge: 1
+    # cloud provider values here
     # accessToken: '' # only needed if not using cloudCredentialSecretName
     backups: false
     image: rockylinux-9-x64 # required (example: rockylinux-9-x64)
@@ -250,6 +266,7 @@ nodepools:
       - sudo mkdir -p /opt/rke2-artifacts/ /etc/rancher/rke2/ /var/lib/rancher/rke2/server/manifests/
       - sudo useradd -r -c "etcd user" -s /sbin/nologin -M etcd -U
   - name: worker-nodes
+    # displayName: wk-nodes
     quantity: 1
     etcd: false
     controlplane: false
@@ -257,8 +274,21 @@ nodepools:
     # labels:
       # key: value
     # taints:
+      # effect: value
       # key: value
+      # value: value
     paused: false
+    # drainBeforeDelete: true
+    # drainBeforeDeleteTimeout: 30s
+    # unhealthyNodeTimeout: 60s
+    # machineDeploymentLabels:
+      # key: value
+    # machineDeploymentAnnotations:
+      # key: value
+    # rollingUpdate:
+      # maxUnavailable: 1
+      # maxSurge: 1
+    # cloud provider values here
     # accessToken: '' # only needed if not using cloudCredentialSecretName
     backups: false
     image: rockylinux-9-x64 # required (example: rockylinux-9-x64)
