--- a/cluster-templates/examples/harvester/values-harvester.yaml
+++ b/cluster-templates/examples/harvester/values-harvester.yaml
@@ -20,7 +20,7 @@ cluster:
   name: rke2-cluster-harvester
   config:
     systemDefaultRegistry: rgcrprod.azurecr.us # default registry
-    kubernetesVersion: v1.26.13+rke2r1 # https://github.com/rancher/rke2/releases
+    kubernetesVersion: v1.27.10+rke2r1 # https://github.com/rancher/rke2/releases
     localClusterAuthEndpoint:
       enabled: false
     # agentEnvVars:
@@ -35,7 +35,7 @@ cluster:
     write_kubeconfig_mode: 0600
     use_service_account_credentials: true
     protect_kernel_defaults: true
-    cloud_provider_name: '' # aws, azure, harvester, vsphere
+    cloud_provider_name: '' # https://ranchermanager.docs.rancher.com/how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers
     # cloud_provider_config: '' # cloud provider config secret here (example: secret://fleet-default:cloudprovider)
     kube_controller_manager_arg: # (https://kubernetes.io/docs/reference/command-line-tools-reference/kube-controller-manager)
       - bind-address=127.0.0.1
@@ -70,7 +70,7 @@ cluster:
       mirrors:
         - name: docker.io
           endpoints:
-            - rgcrprod.azurecr.us
+            - https://rgcrprod.azurecr.us
       # rewrite:
          # "^rancher/(.*)": "mirrorproject/rancher-images/$1"
     upgradeStrategy:
